# cmakecpp

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  main.cpp
Documents/: README.md
test/: CMakeLists.txt  mainTests.cpp
